fixed the issue with the button being visible while scrolling (z-index)

--- a/searchpage/src/Appbar.css
+++ b/searchpage/src/Appbar.css
@@ -3,7 +3,7 @@
     width: 100%;
     margin-top: 0px;
     background-color: white;
-    opacity: 1;
+    z-index: 100;
     position: fixed;
     margin-right: 0px;
 }
